--- a/rock-paper-scissor.html
+++ b/rock-paper-scissor.html
@@ -11,7 +11,7 @@
 		  crossorigin="anonymous"/>
     
     <link rel="stylesheet" href="css/main.min.css">
-    <link rel="stylesheet" href="rock-paper-scissor.css">
+    <link rel="stylesheet" href="/rpc_css/rock-paper-scissor.css">
     <link rel="stylesheet" href="calcu-extrastylesheet.css">
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
@@ -19,7 +19,7 @@
 		    crossorigin="anonymous">
     </script>
     <!--ICO-->
-    <link rel="shortcut icon" href="titlelogo.png" type="image/x-icon" />
+    <link rel="shortcut icon" href="/assets/titlelogo2.png" type="image/x-icon" />
     <!--ICONS-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
 </head>
@@ -28,7 +28,7 @@
         <div class="container-fluid bg-secondary text-primary">
             <div class="navbar navbar-expand-lg">
                 <a class="navbar-brand" href="calculator_page.html">
-                    <img src="calcu-logo.png" style="width: 100px;">
+                    <img src="/assets/calcu-logo2.png" style="width: 100px;">
                 </a>
                 <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#NavBarMenu">
                     <span class="navbar-toggler-icon">
@@ -154,7 +154,7 @@
     <!--end of footer-->
 </body>
 <!--External JS-->
-    <script src="main2.js"></script>
+    <script src="/rpc_js/main2.js"></script>
 </html>
 <!--
     REFERENCES:
